fix(editor-style): remove white space after color setting

--- a/css/src/editor.scss
+++ b/css/src/editor.scss
@@ -40,7 +40,6 @@ $font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans
 			.components-base-control__field {
 				margin: 0 !important;
 				width: 100%;
-				height: 100%;
 			}
 
 			&.genesis-custom-blocks-color-popover {
